--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Beta1 
	- Fixed display issue with players that ignore EXTINF in m3us
		(Thx AlxRogan)
	- Added Refreshing to the Recently Played menu at the same time
		it refresh the now playing on the index page
	- Fixed a cataloging issue that was using a round about way of
		checking to make sure the song wasn't flaged. 
	- A ton of CSS cleanup (Thx apex)
	- Fixed an issue with multi-value config options on test.php
	- Changed default site_charset to UTF-8 in ampache.cfg.php.dist
	- Fixed some <? in show_test.inc (Thx apex)
	- Added Plugin Interface under Admin --> Modules
	- Fixed playtype switcher so it shows all possible play methods
	- Tweaked home page a little, remove pop songs and recent artists
	- Added Recently Played to Main Page
	- Fixed an issue on Browse by Albums and sorting by Artist after
		sorting by something else 
	- Added initial Tag writting script (Thx Jirwin)
  	- Updated flag class to make it easier to create a tag writer
  	- Fixed some potential issues with sort_files.php.inc
	- Added the ability to Upload a M3u and have it attempt to build
		a playlist based on the filenames
	- Added the ability for admins to 'Push' the democratic link
		to a play method/localplay instance
	- Fixed a bug with the File tag_order method
	- Fixed a problem with Localplay Skip to song and added 
		highlighting of currently playing song
	- Added new Flash Player with full support for Non-US Char and 
		colors. (Thx PB1DFT/Enrico Lai http://www.enricolai.com)
	- Tweaked how MPD is handled, if MPD is stopped a new play action
		will clear old playlist, otherwise Play appends. 
		(Thx henrik)
