@@ -143,7 +143,7 @@
 <br />
 <form method="post" action="<?php echo conf('web_path'); ?>/playlist.php?action=add_dyn_song">
 <?php echo _('Save Search As Track on'); ?>:
-<?php show_playlist_dropdown($_SESSION['data']['playlist_id']); ?>
+<?php show_playlist_select($_SESSION['data']['playlist_id'],'dynamic'); ?>
 <input class="button" type="submit" value="<?php echo _('Save'); ?>" /></form>
 <?php } ?>
 <?php require (conf('prefix') . '/templates/show_box_bottom.inc.php'); ?>
